--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "zustand": "^5.0.2"
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
