--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "socket.io-client": "^4.8.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.2"
   },
   "scripts": {
